# logicodex

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEFERRED.md  ENVIRONMENT_SETUP.md  GETTING_STARTED.md  GRAMMAR_ANALYSIS.md  GrammarandDictionary.md  LICENSE-APACHE  LICENSE-MIT  LICENSE-MPL-2.0  MANUAL.md  Makefile  NOTICE  NOTICE-TRADEMARK  README.md  REPOS_CONTEXT.md  ROADMAP.md  ROADMAP_v2.md  SPECIFICATION.md  SYNTAX_ANALYSIS.md  TRADEMARK.md  V130_OPTION_ENGINE.md  WHITE_PAPER.md  build.rs  build_errors.txt  test_errors.txt  v121_execution_design.md
.github/: AUDIT_TEMPLATE.md  CODEOWNERS  ROADMAP_POLICY.md  SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  gatekeeper.yml  release.yml
benches/: BASELINE.json  README.md
benches/harness/: compare_baseline.py  run_all.sh
benches/reactor/: echo_server.rs  flood_client.rs  throughput.sh
benches/security/: fd_exhaustion.py  malformed.py  slowloris.py  syn_flood.py
benches/stability/: longrun.sh  rss_monitor.py  valgrind_check.sh
dict/: core_map.json
docs/: ARCHITECTURE.md  AUDIT.md  CAPABILITY_MATRIX.md  CHANGELOG_ANALYSIS_v121_to_v145.md  DOCUMENTATION_POLICY.md  GAPS_ASSESSMENT.md  GETTING_STARTED.md  HANDBOOK.md  RFC_TEMPLATE.md  VS_CODE_EXTENSION.md  stdlib_contract_versioning.md  stdlib_stage0.md  v1.30-THREADING.md  v1.31-STREAMING.md  v1.34-SHARDED.md  v1.35-CAPABILITY-IR.md  v1.37-NETWORK-RUNTIME.md
docs/architecture/: CONTRACT_EXTENSION_ARCHITECTURE.md  capability-topology.md  code-lifecycle-inventory.md  compiler-subset.md  (+18 more)
examples/: 00_sanity.ldx  01_tambah_pakar.ldx  01_tambah_pemula.ldx  01a_variables.ldx  01b_arithmetic.ldx  01c_boolean.ldx  02_fungsi_matematik.ldx  02a_if_then_else.ldx  02b_while_loop.ldx  02c_loop_break_continue.ldx  03_gelung_kiraan.ldx  03a_functions.ldx  03b_recursion.ldx  04_bitwise_operasi.ldx  04a_match_result.ldx  04a_struct.ldx  04b_bitwise.ldx  04c_enum.ldx  04c_hardware.ldx  05_comprehensive.ldx  05_zon_perkakasan_reflex.ldx  06_logik_bersyarat.ldx  README.md  audio_sine.ldx  bitwise.ldx  fungsi.ldx  gelung.ldx  hello.ldx  hello_pemula.ldx  logik.ldx  matematik.ldx  perkakasan.ldx  stress_01_logik_bersyarat.ldx  stress_02_gelung_ringkas.ldx  stress_03_gelung_bersarang.ldx  stress_04_fungsi_kompleks.ldx  stress_05_ultimate.ldx  tambah.ldx  tambah_pemula.ldx
freestanding/: .gitignore  Cargo.toml  README.md  build.sh  ldx_program.freestanding.md  linker.ld
freestanding/.cargo/: config.toml
freestanding/src/: main.rs
logicodex-os/: Cargo.toml
scripts/: apply_peer_review_alignment.py  apply_v101_alpha_doc_refinement.py  apply_v111_alpha_milestone1.py  apply_v121_alpha_deployment.py  apply_v130_architecture_doc.py  generate_grammar_and_dictionary_md.py  regenerate_repository.py  rename_malay_to_english.py  update_reflex_docs.py  update_release_archives.sh  validate_audio_engine.py  validate_core_memory.py  validate_demo_raylib_box.py  validate_io_file_syscall.py  validate_sprint1_2_parser_types.py  validate_streaming_pass.py  validate_threading_fasa2.py  validate_threading_foundation.py  validate_v121_alpha_deployment.py  validate_v121_executable_logic.py  validate_v130_pipeline.py  validate_v141_host_reactor.py  validate_v142_raylib_pending.py  validate_v144_freestanding.py
src/: ast.rs  codegen.rs  codegen_contract.rs  contract_metadata.rs  ffi.rs  ffi.rs:Zone.Identifier  hir.rs  layout.rs  lexer.rs  lib.rs  lod.rs  main.rs  module_loader.rs  package.rs  parser.rs  semantic.rs  semantic_gate.rs  span.rs  types.rs
stdlib/: io.ldx
tests/: audio_engine_hardware_safe.rs  bitxor.rs  buffer_provenance_bugfixes.rs  capability_fabric.rs  capability_ir.rs  codegen_function_calls.rs  compiler_collections_foundation.rs  compiler_result_option_foundation.rs  core_memory_model.rs  cpb2_callable_closure.rs  cpb_fixed_array_boundary.rs  ctl_mapper.rs  demo_raylib_spinning_box.rs  diagnostics_fail_fast.rs  e2e_pipeline.rs  ffi_stage1_integration.rs  freestanding_v144_gaps.rs  hir_codegen_backpressure.rs  hir_codegen_function.rs  hir_codegen_struct.rs  hir_codegen_threading.rs  host_reactor.rs  io_file_syscall.rs  layout_engine_integration.rs  lexer_parser_test.rs  module_dotted_paths.rs  module_system_stage0.rs  modulo_operator.rs  net_reactor_foundation.rs  network_runtime.rs  p0_hardening_closure_matrix.rs  p1b3_array_codegen_barrier.rs  p1b5_file_io_boundary.rs  package_metadata_reader.rs  parser_struct_literals.rs  parser_type_test.rs  raylib_audio_v143.rs  raylib_ffi_test.rs  raylib_v142_pending.rs  result_abstraction.rs  (+22 more)
tools/: test_stdlib_contract_negatives.py  verify_stdlib_contracts.py
(+271 files in other folders)
