[package]
name = "logicodex"
version = "1.45.0-alpha"
edition = "2021"
authors = ["Mohamad Supardi Abdul <mymsastudio@gmail.com>"]
description = "v1.44-alpha: Freestanding Compiler — 15 gaps resolved (startup, panic, linker, allocator, UART, IDT, MMIO, multiboot)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/msa-studio/logicodex"
readme = "README.md"

[lib]
name = "logicodex"
path = "src/lib.rs"

[[bin]]
name = "logicodex"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "=4.4.18", features = ["derive"] }
clap_lex = "=0.6.0"
inkwell = { version = "0.4.0", features = ["llvm15-0"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
panic = "abort"
strip = "symbols"

[profile.dev]
opt-level = 0
panic = "unwind"

[package.metadata.logicodex]
language_name = "Logicodex"
phase = "v1.21-alpha executable grammar and provenance integration"
source_extension = "ldx"
public_release_label = "v1.21-alpha"
rust_channel = "1.75.0"
llvm_feature = "llvm15-0"
