[package]
name = "logicodex"
version = "1.30.0-alpha"
edition = "2021"
authors = ["Mohamad Supardi Abdul <mymsastudio@gmail.com>"]
description = "Deterministic systems programming language with alias-to-canonical syntax, actor-model concurrency, and compile-time capability security"
keywords = ["compiler", "systems-programming", "concurrency", "capability-security", "llvm"]
categories = ["compilers", "development-tools"]
license = "MPL-2.0"
repository = "https://github.com/msa-studio/logicodex"
readme = "README.md"

[lib]
name = "logicodex"
path = "src/lib.rs"

[[bin]]
name = "logicodex"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "=4.4.18", features = ["derive"] }
clap_lex = "=0.6.0"
inkwell = { version = "0.4.0", features = ["llvm15-0"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
panic = "abort"
strip = "symbols"

# Benchmarks (Criterion) need unwinding and must not inherit release's
# panic=abort + fat LTO, which produce an unloadable bench harness bitcode.
[profile.bench]
panic = "unwind"
lto = false

# (No feature flags: HIR is the single, unconditional compilation engine.
# The former `v1_30` feature gated HIR/ffi/tier2/layout; those are now always
# compiled. The legacy non-HIR arms have been deleted.)

[profile.dev]
opt-level = 0
panic = "unwind"

[package.metadata.logicodex]
language_name = "Logicodex"
phase = "v1.30.0-alpha"
source_extension = "ldx"
public_release_label = "v1.30.0-alpha"
rust_channel = "1.75.0"
llvm_feature = "llvm15-0"

[workspace]
